--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,13 @@
 name: "Release"
 
-# permissions:
-#   contents: "write"
+permissions:
+  contents: "write"
 
 on:
-  push:
-    tags:
-      - 'v*.*.*'
+  workflow_run:
+    workflows: ["Tag"]
+    types:
+      - "completed"
 
 jobs:
   get-tag:
