--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,11 +58,10 @@ jobs:
      - "create-release"
     strategy:
       matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
         include:
-          - target: "x86_64-unknown-linux-gnu"
-            os: "ubuntu-latest"
-          - target: "x86_64-unknown-linux-musl"
-            os: "ubuntu-latest"
+          - os: ubuntu-latest
+            features: systemd,io_uring
     runs-on: ${{ matrix.os }}
     steps:
       - name: "Check out the repo"
