--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,10 +58,15 @@ jobs:
      - "create-release"
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
         include:
-          - os: ubuntu-latest
-            features: systemd,io_uring
+          - target: aarch64-unknown-linux-gnu
+            os: ubuntu-latest
+          - target: aarch64-apple-darwin
+            os: macos-latest
+          - target: x86_64-unknown-linux-gnu
+            os: ubuntu-latest
+          - target: x86_64-apple-darwin
+            os: macos-latest
     runs-on: ${{ matrix.os }}
     steps:
       - name: "Check out the repo"
@@ -71,7 +76,7 @@ jobs:
         uses: "taiki-e/upload-rust-binary-action@v1"
         with:
           bin: "migrate-file"
-          target: ${{ matrix.os }}
-          archive: $bin-${{ matrix.os }}
+          target: ${{ matrix.taget }}
+          archive: $bin-${{ matrix.target }}
           ref: refs/tags/v${{ needs.get-tag.outputs.pkg-version }}
           token: ${{ secrets.GITHUB_TOKEN }}
